--- a/en/get-humanitarian.html
+++ b/en/get-humanitarian.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="../assets/css/app.a763773efe3e3504b543.css" rel="stylesheet"></head>
+<link href="../assets/css/app.2cb78f3f9b339f3e7997.css" rel="stylesheet"></head>
 <body class="infrastructure-page">
 <header class="header">
   <div class="container">
@@ -75,7 +75,7 @@
       <button class="btn js-help-btn"
               data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
       >
-        Help me
+        Fill in the form for humanitarian aid
       </button>
     </div>
     <!--ФОРМА ГУМАНІТАРНОЇ ДОПОМОГИ КІНЕЦЬ-->
@@ -110,5 +110,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.a763773efe3e3504b543.js"></script><script type="text/javascript" src="../assets/js/app.a763773efe3e3504b543.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.2cb78f3f9b339f3e7997.js"></script><script type="text/javascript" src="../assets/js/app.2cb78f3f9b339f3e7997.js"></script></body>
 </html>
