--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description"
         content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
   <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії - Рада Свободи</title>
-<link href="assets/css/app.a763773efe3e3504b543.css" rel="stylesheet"></head>
+<link href="assets/css/app.2cb78f3f9b339f3e7997.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -61,9 +61,6 @@
       <a href="infrastructure.html" class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та
         інфраструктури
       </a>
-    </div>
-    <div class="page_nav-item">
-      <div class="page_nav-item_text" data-target-block="block-bank">Банківський переказ</div>
     </div>
   </div>
   <!--NAVIGATION END-->
@@ -202,8 +199,8 @@
             Council of Freedom - об’єднання вільних духом людей з активною життєвою позицією.
           </p>
           <p>
-            Громадська організація Рада Свободи була створена для реалізації благодійних, соціальних та гуманітарних
-            проектів.
+            Громадська організація Рада Свободи була створена у 2010 році для реалізації благодійних,
+            соціальних та гуманітарних проєктів.
           </p>
           <p>
             Нашою головною ідеологією завжди було - зробити людей трохи щасливішими, а світ добрішими та кращим.
@@ -215,11 +212,6 @@
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="bank_block js-bank-block js-target-block" id="block-bank">
-    <div class="bank_block-title title-1 " data-text="Банківський переказ">Банківський переказ</div>
-    <div class="bank_block-list js-bank-list" data-type="index"></div>
   </div>
 
 </div>
@@ -247,6 +239,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.a763773efe3e3504b543.js"></script><script type="text/javascript" src="assets/js/app.a763773efe3e3504b543.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.2cb78f3f9b339f3e7997.js"></script><script type="text/javascript" src="assets/js/app.2cb78f3f9b339f3e7997.js"></script></body>
 
 </html>
