Main page MOBILE styles

--- a/src/pages/en/index.html
+++ b/src/pages/en/index.html
@@ -103,7 +103,7 @@
             crisis. Join to rescue people.
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Money transfers</a>
         </div>
       </div>
@@ -122,7 +122,7 @@
             and send us- we will sort it and pass to whom needs in it more.
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
           >
@@ -144,7 +144,7 @@
             humanitarian aid.
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
           >
@@ -173,7 +173,7 @@
             Besides 15 000 km highways, 5 000 km roads, 350 bridges were partially or fully destroyed
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <a href="infrastructure.html" class="block_one-info_btn btn">Money transfers</a>
         </div>
       </div>
