--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,13 @@
         <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
       </a>
     </div>
+
+
+    <div class="burger_btn js-menu-toggle desktop-hidden">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </div>
 </header>
 
@@ -50,6 +57,12 @@
 
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
+
+    <div class="lang">
+      <a href="/en/" class="lang-item">en</a>
+      <div class="lang-item active">ua</div>
+    </div>
+
     <div class="page_nav-item">
       <a href="about-humanitarian-aid.html" class="page_nav-item_text">Збір засобів для гуманітарної допомоги</a>
     </div>
@@ -64,6 +77,18 @@
         інфраструктури
       </a>
     </div>
+
+    <div class="socials desktop-hidden">
+      <a href="/" class="socials-item" target="_blank">
+        <img src="/assets/img/svg/icon-facebook.svg" alt="facebook">
+      </a>
+      <a href="/" class="socials-item" target="_blank">
+        <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
+      </a>
+    </div>
+
+    <div class="close_btn js-menu-toggle desktop-hidden"></div>
+
   </div>
   <!--NAVIGATION END-->
 
@@ -98,7 +123,7 @@
             щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
@@ -119,7 +144,7 @@
           власний розсуд та надіслати її нам - ми відсортуємо та передамо її тим, хто найбільше цього потребує.
           Надіслати гуманітарну допомогу
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
           >
@@ -144,7 +169,7 @@
             допомогти в отриманні гуманітарної допомоги.
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
           >
@@ -172,7 +197,7 @@
             кілометрів залізничних шляхів, 350 мостів та переходів.</p>
           <p>Ви можете долучитися до збору коштів на відновлення зруйнованих будівель та інфраструктури</p>
         </div>
-        <div>
+        <div class="block_one-info_btn">
           <a href="infrastructure.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
