--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description"
         content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
   <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії - Рада Свободи</title>
-<link href="assets/css/app.2cb78f3f9b339f3e7997.css" rel="stylesheet"></head>
+<link href="assets/css/app.9fa53b738ff986fd44f9.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -34,6 +34,13 @@
         <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
       </a>
     </div>
+
+
+    <div class="burger_btn js-menu-toggle desktop-hidden">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </div>
 </header>
 
@@ -48,6 +55,12 @@
 
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
+
+    <div class="lang">
+      <a href="/en/" class="lang-item">en</a>
+      <div class="lang-item active">ua</div>
+    </div>
+
     <div class="page_nav-item">
       <a href="about-humanitarian-aid.html" class="page_nav-item_text">Збір засобів для гуманітарної допомоги</a>
     </div>
@@ -62,6 +75,18 @@
         інфраструктури
       </a>
     </div>
+
+    <div class="socials desktop-hidden">
+      <a href="/" class="socials-item" target="_blank">
+        <img src="/assets/img/svg/icon-facebook.svg" alt="facebook">
+      </a>
+      <a href="/" class="socials-item" target="_blank">
+        <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
+      </a>
+    </div>
+
+    <div class="close_btn js-menu-toggle desktop-hidden"></div>
+
   </div>
   <!--NAVIGATION END-->
 
@@ -96,7 +121,7 @@
             щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
@@ -117,7 +142,7 @@
           власний розсуд та надіслати її нам - ми відсортуємо та передамо її тим, хто найбільше цього потребує.
           Надіслати гуманітарну допомогу
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
           >
@@ -142,7 +167,7 @@
             допомогти в отриманні гуманітарної допомоги.
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
           >
@@ -170,7 +195,7 @@
             кілометрів залізничних шляхів, 350 мостів та переходів.</p>
           <p>Ви можете долучитися до збору коштів на відновлення зруйнованих будівель та інфраструктури</p>
         </div>
-        <div>
+        <div class="block_one-info_btn">
           <a href="infrastructure.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
@@ -239,6 +264,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.2cb78f3f9b339f3e7997.js"></script><script type="text/javascript" src="assets/js/app.2cb78f3f9b339f3e7997.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.9fa53b738ff986fd44f9.js"></script><script type="text/javascript" src="assets/js/app.9fa53b738ff986fd44f9.js"></script></body>
 
 </html>
