--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description"
         content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
   <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії - Рада Свободи</title>
-<link href="assets/css/app.9fa53b738ff986fd44f9.css" rel="stylesheet"></head>
+<link href="assets/css/app.6ea24318332e39e6343c.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -34,13 +34,6 @@
         <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
       </a>
     </div>
-
-
-    <div class="burger_btn js-menu-toggle desktop-hidden">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
   </div>
 </header>
 
@@ -55,12 +48,6 @@
 
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
-
-    <div class="lang">
-      <a href="/en/" class="lang-item">en</a>
-      <div class="lang-item active">ua</div>
-    </div>
-
     <div class="page_nav-item">
       <a href="about-humanitarian-aid.html" class="page_nav-item_text">Збір засобів для гуманітарної допомоги</a>
     </div>
@@ -75,18 +62,6 @@
         інфраструктури
       </a>
     </div>
-
-    <div class="socials desktop-hidden">
-      <a href="/" class="socials-item" target="_blank">
-        <img src="/assets/img/svg/icon-facebook.svg" alt="facebook">
-      </a>
-      <a href="/" class="socials-item" target="_blank">
-        <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
-      </a>
-    </div>
-
-    <div class="close_btn js-menu-toggle desktop-hidden"></div>
-
   </div>
   <!--NAVIGATION END-->
 
@@ -121,7 +96,7 @@
             щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
           </p>
         </div>
-        <div class="block_one-info_btn">
+        <div class="">
           <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
@@ -142,7 +117,7 @@
           власний розсуд та надіслати її нам - ми відсортуємо та передамо її тим, хто найбільше цього потребує.
           Надіслати гуманітарну допомогу
         </div>
-        <div class="block_one-info_btn">
+        <div class="">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
           >
@@ -167,7 +142,7 @@
             допомогти в отриманні гуманітарної допомоги.
           </p>
         </div>
-        <div class="block_one-info_btn">
+        <div class="">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
           >
@@ -195,7 +170,7 @@
             кілометрів залізничних шляхів, 350 мостів та переходів.</p>
           <p>Ви можете долучитися до збору коштів на відновлення зруйнованих будівель та інфраструктури</p>
         </div>
-        <div class="block_one-info_btn">
+        <div>
           <a href="infrastructure.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
@@ -264,6 +239,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.9fa53b738ff986fd44f9.js"></script><script type="text/javascript" src="assets/js/app.9fa53b738ff986fd44f9.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.6ea24318332e39e6343c.js"></script><script type="text/javascript" src="assets/js/app.6ea24318332e39e6343c.js"></script></body>
 
 </html>
