--- a/en/index.html
+++ b/en/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Volunteer public organization Council of Freedom - Humanitarian and medical assistance to Ukrainians affected by Russian aggression."/>
   <title>Humanitarian and medical assistance to Ukrainians affected by Russian aggression - Freedom Council</title>
-<link href="../assets/css/app.6ea24318332e39e6343c.css" rel="stylesheet"></head>
+<link href="../assets/css/app.2069d500826f098a1d36.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -101,7 +101,7 @@
             crisis. Join to rescue people.
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Money transfers</a>
         </div>
       </div>
@@ -120,7 +120,7 @@
             and send us- we will sort it and pass to whom needs in it more.
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
           >
@@ -142,7 +142,7 @@
             humanitarian aid.
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
           >
@@ -171,7 +171,7 @@
             Besides 15 000 km highways, 5 000 km roads, 350 bridges were partially or fully destroyed
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <a href="infrastructure.html" class="block_one-info_btn btn">Money transfers</a>
         </div>
       </div>
@@ -235,6 +235,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.6ea24318332e39e6343c.js"></script><script type="text/javascript" src="../assets/js/app.6ea24318332e39e6343c.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.2069d500826f098a1d36.js"></script><script type="text/javascript" src="../assets/js/app.2069d500826f098a1d36.js"></script></body>
 
 </html>
