--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description"
         content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
   <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії - Рада Свободи</title>
-<link href="assets/css/app.6ea24318332e39e6343c.css" rel="stylesheet"></head>
+<link href="assets/css/app.2069d500826f098a1d36.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -34,6 +34,7 @@
         <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
       </a>
     </div>
+
   </div>
 </header>
 
@@ -96,7 +97,7 @@
             щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <a href="about-humanitarian-aid.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
@@ -117,7 +118,7 @@
           власний розсуд та надіслати її нам - ми відсортуємо та передамо її тим, хто найбільше цього потребує.
           Надіслати гуманітарну допомогу
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
           >
@@ -142,7 +143,7 @@
             допомогти в отриманні гуманітарної допомоги.
           </p>
         </div>
-        <div class="">
+        <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
           >
@@ -170,7 +171,7 @@
             кілометрів залізничних шляхів, 350 мостів та переходів.</p>
           <p>Ви можете долучитися до збору коштів на відновлення зруйнованих будівель та інфраструктури</p>
         </div>
-        <div>
+        <div class="block_one-info_btn">
           <a href="infrastructure.html" class="block_one-info_btn btn">Надіслати кошти</a>
         </div>
       </div>
@@ -187,13 +188,18 @@
       <img width="1600" height="340" src="/assets/img/flag-banner.png"/>
     </div>
     <div class="width_block-info">
-      <div class="left_part">
+      <div class="left_part mobile-hidden">
         <img src="/assets/img/svg/icon-freedom.svg" alt="freedom icon">
       </div>
       <div class="right_part">
         <div class="width_block-info_title title-1">
           Про організацію
         </div>
+
+        <div class="right_part-img desktop-hidden">
+          <img src="/assets/img/logo.png" alt="freedom logo">
+        </div>
+
         <div class="width_block-info_text">
           <p>
             Council of Freedom - об’єднання вільних духом людей з активною життєвою позицією.
@@ -239,6 +245,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.6ea24318332e39e6343c.js"></script><script type="text/javascript" src="assets/js/app.6ea24318332e39e6343c.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.2069d500826f098a1d36.js"></script><script type="text/javascript" src="assets/js/app.2069d500826f098a1d36.js"></script></body>
 
 </html>
