Main page MOBILE styles from figma

--- a/src/index.html
+++ b/src/index.html
@@ -37,12 +37,6 @@
       </a>
     </div>
 
-
-    <div class="burger_btn js-menu-toggle desktop-hidden">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
   </div>
 </header>
 
@@ -57,12 +51,6 @@
 
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
-
-    <div class="lang">
-      <a href="/en/" class="lang-item">en</a>
-      <div class="lang-item active">ua</div>
-    </div>
-
     <div class="page_nav-item">
       <a href="about-humanitarian-aid.html" class="page_nav-item_text">Збір засобів для гуманітарної допомоги</a>
     </div>
@@ -77,18 +65,6 @@
         інфраструктури
       </a>
     </div>
-
-    <div class="socials desktop-hidden">
-      <a href="/" class="socials-item" target="_blank">
-        <img src="/assets/img/svg/icon-facebook.svg" alt="facebook">
-      </a>
-      <a href="/" class="socials-item" target="_blank">
-        <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
-      </a>
-    </div>
-
-    <div class="close_btn js-menu-toggle desktop-hidden"></div>
-
   </div>
   <!--NAVIGATION END-->
 
@@ -214,13 +190,18 @@
       <img width="1600" height="340" src="/assets/img/flag-banner.png"/>
     </div>
     <div class="width_block-info">
-      <div class="left_part">
+      <div class="left_part mobile-hidden">
         <img src="/assets/img/svg/icon-freedom.svg" alt="freedom icon">
       </div>
       <div class="right_part">
         <div class="width_block-info_title title-1">
           Про організацію
         </div>
+
+        <div class="right_part-img desktop-hidden">
+          <img src="/assets/img/logo.png" alt="freedom logo">
+        </div>
+
         <div class="width_block-info_text">
           <p>
             Council of Freedom - об’єднання вільних духом людей з активною життєвою позицією.
