Inner pages mobile styles + UKR text

--- a/src/pages/about-humanitarian-aid.html
+++ b/src/pages/about-humanitarian-aid.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
 </head>
-<body class="infrastructure-page">
+<body class="inner-page">
 <header class="header">
   <div class="container">
     <a href="/" class="header_logo">
@@ -63,25 +63,22 @@
   <!--Блок опис-->
   <section class="description">
     <div class="description_img">
-      <img src="/assets/img/about-humanitarian-img.png" alt="about humanitarian image">
+      <picture>
+        <source srcset="/assets/img/about-humanitarian-img-mobile.png" media="(max-width: 768px)">
+        <img src="/assets/img/about-humanitarian-img.png" alt="about humanitarian image">
+      </picture>
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
         Збір коштів для гуманітарної допомоги
       </h2>
       <div class="description_info-text">
-        <p>Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
-        </p>
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+          Багато логістичних ланцюжків повністю розірвані, багато підприємств знищено фізично, деякі - не можуть
+          працювати в режимі війни, багато працівників просто поїхали. Люди, що проживали на територіях, де
+          відбуваються активні бойові дії залишилось без даху над головою та засобів для існування - їм надають
+          прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. <b>Долучайтеся
+          до порятунку</b>
         </p>
       </div>
     </div>
