--- a/src/pages/get-humanitarian.html
+++ b/src/pages/get-humanitarian.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
 </head>
-<body class="infrastructure-page">
+<body class="inner-page">
 <header class="header">
   <div class="container">
     <a href="/" class="header_logo">
@@ -58,25 +58,30 @@
   <!--Блок опис-->
   <section class="description">
     <div class="description_img">
-      <img src="/assets/img/get-humanitarian-img.png" alt="about humanitarian image">
+      <picture>
+        <source srcset="/assets/img/get-humanitarian-img-mobile.png" media="(max-width: 768px)">
+        <img src="/assets/img/get-humanitarian-img.png" alt="get humanitarian image">
+      </picture>
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
         Отримати гуманітарну допомогу
       </h2>
       <div class="description_info-text">
-        <p>Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
-        </p>
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+          Українська юридична консультативна група зробила мапу руйнування цивільної інфраструктури збройними силами
+          рф.
+        </p>
+        <p>Близько 6,5 млн українців стали внутрішніми переселенцями.</p>
+        <p>За заданими соціологів, серед українців, які мали роботу до війни, 53% сьогодні не працюють. 22% працюють у
+          звичному режимі, 21% – віддалено або частково, лише 2% – знайшли собі нову роботу.</p>
+        <p>Економічне становище внаслідок війни не змінилося лише у 18% громадян, у 52% значно погіршилося, у 28%
+          скоріше погіршилося. Дохід «закриває» базові потреби людини, дає відчуття безпеки та знижує тривогу перед
+          невизначеним майбутнім.
+          40% опитаних вважають, що їх заощаджень вистачить лише на місяць.
+        </p>
+        <p>Втратив домівку, був змушений терміново покинути дім або знаходишся у скрутному становищі? Ми можемо
+          допомогти в отриманні гуманітарної допомоги.
         </p>
       </div>
     </div>
