--- a/src/pages/send-humanitarian.html
+++ b/src/pages/send-humanitarian.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
 </head>
-<body class="infrastructure-page">
+<body class="inner-page">
 <header class="header">
   <div class="container">
     <a href="/" class="header_logo">
@@ -58,25 +58,26 @@
   <!--Блок опис-->
   <section class="description">
     <div class="description_img">
-      <img src="/assets/img/send-humanitarian-img.png" alt="about humanitarian image">
+      <picture>
+        <source srcset="/assets/img/send-humanitarian-img-mobile.png" media="(max-width: 768px)">
+        <img src="/assets/img/send-humanitarian-img.png" alt="send humanitarian aid">
+      </picture>
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
         Надіслати гуманітарну допомогу
       </h2>
       <div class="description_info-text">
-        <p>Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+        <p>
+          Мирні мешканці міст, які опинились в облозі російських військ та піддаються постійним обстрілам сидять
+          тижнями
+          у підвалах без води, їжі, світла та тепла. Будь-яка допомога буде для них доречною. Їжа, а зокрема - дитяче
+          харчування, підгузники, одяг, медикаменти, засоби особистої гігієни, медичне обладнання, аптечки та ін., -
+          може стати у нагоді постраждалим та врятувати чиєсь життя.
         </p>
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+          Ви можете зібрати гуманітарну допомогу та надіслати її нам - ми відсортуємо та передамо її тим, хто
+          найбільше цього потребує.
         </p>
       </div>
     </div>
