--- a/src/pages/en/get-humanitarian.html
+++ b/src/pages/en/get-humanitarian.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
 </head>
-<body class="infrastructure-page">
+<body class="inner-page">
 <header class="header">
   <div class="container">
     <a href="/" class="header_logo">
