--- a/send-humanitarian.html
+++ b/send-humanitarian.html
@@ -8,8 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="assets/css/app.2069d500826f098a1d36.css" rel="stylesheet"></head>
-<body class="infrastructure-page">
+<link href="assets/css/app.5c7362e5cc6071c156fc.css" rel="stylesheet"></head>
+<body class="inner-page">
 <header class="header">
   <div class="container">
     <a href="/" class="header_logo">
@@ -56,25 +56,26 @@
   <!--Блок опис-->
   <section class="description">
     <div class="description_img">
-      <img src="/assets/img/send-humanitarian-img.png" alt="about humanitarian image">
+      <picture>
+        <source srcset="/assets/img/send-humanitarian-img-mobile.png" media="(max-width: 768px)">
+        <img src="/assets/img/send-humanitarian-img.png" alt="send humanitarian aid">
+      </picture>
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
         Надіслати гуманітарну допомогу
       </h2>
       <div class="description_info-text">
-        <p>Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+        <p>
+          Мирні мешканці міст, які опинились в облозі російських військ та піддаються постійним обстрілам сидять
+          тижнями
+          у підвалах без води, їжі, світла та тепла. Будь-яка допомога буде для них доречною. Їжа, а зокрема - дитяче
+          харчування, підгузники, одяг, медикаменти, засоби особистої гігієни, медичне обладнання, аптечки та ін., -
+          може стати у нагоді постраждалим та врятувати чиєсь життя.
         </p>
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+          Ви можете зібрати гуманітарну допомогу та надіслати її нам - ми відсортуємо та передамо її тим, хто
+          найбільше цього потребує.
         </p>
       </div>
     </div>
@@ -118,5 +119,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.2069d500826f098a1d36.js"></script><script type="text/javascript" src="assets/js/app.2069d500826f098a1d36.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.5c7362e5cc6071c156fc.js"></script><script type="text/javascript" src="assets/js/app.5c7362e5cc6071c156fc.js"></script></body>
 </html>
