--- a/about-humanitarian-aid.html
+++ b/about-humanitarian-aid.html
@@ -8,8 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="assets/css/app.2069d500826f098a1d36.css" rel="stylesheet"></head>
-<body class="infrastructure-page">
+<link href="assets/css/app.5c7362e5cc6071c156fc.css" rel="stylesheet"></head>
+<body class="inner-page">
 <header class="header">
   <div class="container">
     <a href="/" class="header_logo">
@@ -61,25 +61,22 @@
   <!--Блок опис-->
   <section class="description">
     <div class="description_img">
-      <img src="/assets/img/about-humanitarian-img.png" alt="about humanitarian image">
+      <picture>
+        <source srcset="/assets/img/about-humanitarian-img-mobile.png" media="(max-width: 768px)">
+        <img src="/assets/img/about-humanitarian-img.png" alt="about humanitarian image">
+      </picture>
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
         Збір коштів для гуманітарної допомоги
       </h2>
       <div class="description_info-text">
-        <p>Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
-        </p>
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+          Багато логістичних ланцюжків повністю розірвані, багато підприємств знищено фізично, деякі - не можуть
+          працювати в режимі війни, багато працівників просто поїхали. Люди, що проживали на територіях, де
+          відбуваються активні бойові дії залишилось без даху над головою та засобів для існування - їм надають
+          прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. <b>Долучайтеся
+          до порятунку</b>
         </p>
       </div>
     </div>
@@ -120,5 +117,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.2069d500826f098a1d36.js"></script><script type="text/javascript" src="assets/js/app.2069d500826f098a1d36.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.5c7362e5cc6071c156fc.js"></script><script type="text/javascript" src="assets/js/app.5c7362e5cc6071c156fc.js"></script></body>
 </html>
