--- a/en/infrastructure.html
+++ b/en/infrastructure.html
@@ -8,8 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="../assets/css/app.2069d500826f098a1d36.css" rel="stylesheet"></head>
-<body class="infrastructure-page">
+<link href="../assets/css/app.5c7362e5cc6071c156fc.css" rel="stylesheet"></head>
+<body class="inner-page infrastructure-page">
 <header class="header">
   <div class="container">
     <a href="/en/" class="header_logo">
@@ -118,5 +118,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.2069d500826f098a1d36.js"></script><script type="text/javascript" src="../assets/js/app.2069d500826f098a1d36.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.5c7362e5cc6071c156fc.js"></script><script type="text/javascript" src="../assets/js/app.5c7362e5cc6071c156fc.js"></script></body>
 </html>
