--- a/get-humanitarian.html
+++ b/get-humanitarian.html
@@ -8,8 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="assets/css/app.2069d500826f098a1d36.css" rel="stylesheet"></head>
-<body class="infrastructure-page">
+<link href="assets/css/app.5c7362e5cc6071c156fc.css" rel="stylesheet"></head>
+<body class="inner-page">
 <header class="header">
   <div class="container">
     <a href="/" class="header_logo">
@@ -56,25 +56,30 @@
   <!--Блок опис-->
   <section class="description">
     <div class="description_img">
-      <img src="/assets/img/get-humanitarian-img.png" alt="about humanitarian image">
+      <picture>
+        <source srcset="/assets/img/get-humanitarian-img-mobile.png" media="(max-width: 768px)">
+        <img src="/assets/img/get-humanitarian-img.png" alt="get humanitarian image">
+      </picture>
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
         Отримати гуманітарну допомогу
       </h2>
       <div class="description_info-text">
-        <p>Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
-        </p>
         <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+          Українська юридична консультативна група зробила мапу руйнування цивільної інфраструктури збройними силами
+          рф.
+        </p>
+        <p>Близько 6,5 млн українців стали внутрішніми переселенцями.</p>
+        <p>За заданими соціологів, серед українців, які мали роботу до війни, 53% сьогодні не працюють. 22% працюють у
+          звичному режимі, 21% – віддалено або частково, лише 2% – знайшли собі нову роботу.</p>
+        <p>Економічне становище внаслідок війни не змінилося лише у 18% громадян, у 52% значно погіршилося, у 28%
+          скоріше погіршилося. Дохід «закриває» базові потреби людини, дає відчуття безпеки та знижує тривогу перед
+          невизначеним майбутнім.
+          40% опитаних вважають, що їх заощаджень вистачить лише на місяць.
+        </p>
+        <p>Втратив домівку, був змушений терміново покинути дім або знаходишся у скрутному становищі? Ми можемо
+          допомогти в отриманні гуманітарної допомоги.
         </p>
       </div>
     </div>
@@ -119,5 +124,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.2069d500826f098a1d36.js"></script><script type="text/javascript" src="assets/js/app.2069d500826f098a1d36.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.5c7362e5cc6071c156fc.js"></script><script type="text/javascript" src="assets/js/app.5c7362e5cc6071c156fc.js"></script></body>
 </html>
