--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description"
         content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
   <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії - Рада Свободи</title>
-<link href="assets/css/app.2069d500826f098a1d36.css" rel="stylesheet"></head>
+<link href="assets/css/app.5c7362e5cc6071c156fc.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -41,7 +41,7 @@
 <div class="container">
   <div class="banner">
     <h1 class="banner_text">
-      Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії
+      Гуманітарна та медична допомога Україні
     </h1>
 
     <div class="arr_btn down js-next-screen"></div>
@@ -75,12 +75,27 @@
         Опис катастрофи в Україні
       </div>
       <div class="width_block-info_text">
-        <p>24 лютого 2022 року відбувся військовий напад РФ на Україну. Збройні сили України щоденно відбивають напад,
-          проте ворог продовжує цинічно завдавати авіаційних ударів по мирних містах, продовжує артилерійські обстріли
-          житлових кварталів та ігнорує необхідність надання гуманітарних коридорів.</p>
-        <p>У перші тижні війни загинуло більше двох тисяч мирних жителів, приблизно така ж кількість отримала серйозні
-          поранення. 2 мільйони українців були змушені виїхати за кордон. </p>
-        <p>Весь світ об'єднався задля того, щоб зупинити кривавого диктатора. Дізнайся, чим можеш допомогти саме ти.</p>
+        <p>
+          24 лютого 2022 року росія розпочала повномасштабне вторгнення в Україну вдаривши ракетними обстрілами по
+          більшості областей країни одночасно із сухопутним наступом.
+        </p>
+        <p>
+          Не спромігшись на бліцкриг, швидке захоплення Києва та інших великих українських міст, російська армія за цей
+          місяць перейшла в Україні до найжорстокішої тактики — нищення українських міст без прямого контакту з ЗСУ,
+          через ракетні обстріли, авіанальоти та бомбардування з повітря.
+        </p>
+        <p>
+          За даними ООН, від початку війни з території України виїхало більш ніж 3,5 млн людей. Також, за даними
+          агенства ООН з міграції близько 6,5 млн українців стали внутрішніми переселенцями.
+        </p>
+        <p>
+          Офіс Генерального Прокурора України опублікував статистику злочинів, вчинених за період повномасштабного
+          вторгнення рф в Україну. Найжахливіше те, що серед мирного населення загинула вже 128 дитина, і щонайменше 167
+          поранено.
+        </p>
+        <p>
+          Весь світ об'єднався задля того, щоб зупинити кривавого диктатора. Дізнайся, чим можеш допомогти саме ти.
+        </p>
       </div>
     </div>
   </div>
@@ -92,9 +107,11 @@
         <div class="block_one-info_title">Збір коштів на гуманітарну допомогу</div>
         <div class="block_one-info_text">
           <p>
-            Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-            залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе,
-            щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
+            Багато логістичних ланцюжків повністю розірвані, багато підприємств знищено фізично, деякі - не можуть
+            працювати в режимі війни, багато працівників просто поїхали. Люди, що проживали на територіях, де
+            відбуваються активні бойові дії залишилось без даху над головою та засобів для існування - їм надають
+            прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. <b>Долучайтеся
+            до порятунку</b>
           </p>
         </div>
         <div class="block_one-info_btn">
@@ -109,14 +126,19 @@
     <!--Block 2-->
     <div class="block_one js-target-block" id="block-2">
       <div class="block_one-info">
-        <div class="block_one-info_title">Збір гуманітарної
-          допомоги
-        </div>
+        <div class="block_one-info_title">Збір гуманітарної допомоги</div>
         <div class="block_one-info_text">
-          Будь-яка допомога доречна. Їжа, одяг, медикаменти, медичне обладнання, аптечки - що завгодно, що може стати у
-          нагоді постраждалим та біженцям з зони ведення активних бойових дій. Ви можете зібрати гуманітарну допомогу на
-          власний розсуд та надіслати її нам - ми відсортуємо та передамо її тим, хто найбільше цього потребує.
-          Надіслати гуманітарну допомогу
+          <p>
+            Мирні мешканці міст, які опинились в облозі російських військ та піддаються постійним обстрілам сидять
+            тижнями
+            у підвалах без води, їжі, світла та тепла. Будь-яка допомога буде для них доречною. Їжа, а зокрема - дитяче
+            харчування, підгузники, одяг, медикаменти, засоби особистої гігієни, медичне обладнання, аптечки та ін., -
+            може стати у нагоді постраждалим та врятувати чиєсь життя.
+          </p>
+          <p>
+            Ви можете зібрати гуманітарну допомогу та надіслати її нам - ми відсортуємо та передамо її тим, хто
+            найбільше цього потребує.
+          </p>
         </div>
         <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
@@ -139,9 +161,12 @@
         </div>
         <div class="block_one-info_text">
           <p>
-            Втратив домівку, був змушений терміново покинути дім або знаходишся у скрутному становищі? Ми можемо
-            допомогти в отриманні гуманітарної допомоги.
+            Українська юридична консультативна група зробила мапу руйнування цивільної інфраструктури збройними силами
+            рф.
           </p>
+          <p>Близько 6,5 млн українців стали внутрішніми переселенцями.</p>
+          <p>За заданими соціологів, серед українців, які мали роботу до війни, 53% сьогодні не працюють. 22% працюють у
+            звичному режимі, 21% – віддалено або частково, лише 2% – знайшли собі нову роботу.</p>
         </div>
         <div class="block_one-info_btn">
           <button class="block_one-info_btn btn js-help-btn"
@@ -164,12 +189,24 @@
           Збір коштів на відновлення зруйнованого житла та інфраструктури
         </div>
         <div class="block_one-info_text">
-          <p>За даними KSE та волонтерів від початку війни в Україні було пошкоджено та/або повністю зруйновано понад
-            200 освітніх закладів, 30 закладів охорони здоров'я, 8 церков, 1600 житлових будинків, 19 адміністративних
-            будівель, 23 заводи, 12 летовищ, 5 ТЕС та ГЕС.</p>
-          <p>Окрім цього зруйновано або виведено з ладу більше 15 тисяч кілометрів автомобільних доріг, 5 тисяч
-            кілометрів залізничних шляхів, 350 мостів та переходів.</p>
-          <p>Ви можете долучитися до збору коштів на відновлення зруйнованих будівель та інфраструктури</p>
+          <p>1,8 трлн гривень — найскромніша оцінка збитків інфраструктурі України за місяць війни</p>
+          <p>Лише за перші три тижні російського вторгнення збитки, завдані інфраструктурі України, досягли щонайменше
+            1,8 трлн гривень ($62,6 млрд). Таку оцінку станом на 17 березня дали експерти Київської школи економіки в
+            межах спільного з урядом проекту.
+          </p>
+          <p>
+            Зруйновано щонайменше:
+          <ul>
+            <li>4 431 житловий будинок;</li>
+            <li>548 навчальних закладів;</li>
+            <li>135 медичних закладів;</li>
+            <li>8 закладів культури та мистецтва;</li>
+            <li>26 заводів та складів;</li>
+            <li>15 аеропортів;</li>
+            <li>6 ТЕС та ГЕС тощо.</li>
+          </ul>
+          </p>
+
         </div>
         <div class="block_one-info_btn">
           <a href="infrastructure.html" class="block_one-info_btn btn">Надіслати кошти</a>
@@ -245,6 +282,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.2069d500826f098a1d36.js"></script><script type="text/javascript" src="assets/js/app.2069d500826f098a1d36.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.5c7362e5cc6071c156fc.js"></script><script type="text/javascript" src="assets/js/app.5c7362e5cc6071c156fc.js"></script></body>
 
 </html>
