--- a/infrastructure.html
+++ b/infrastructure.html
@@ -8,8 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="assets/css/app.2069d500826f098a1d36.css" rel="stylesheet"></head>
-<body class="infrastructure-page">
+<link href="assets/css/app.5c7362e5cc6071c156fc.css" rel="stylesheet"></head>
+<body class="inner-page infrastructure-page">
 <header class="header">
   <div class="container">
     <a href="/" class="header_logo">
@@ -59,30 +59,46 @@
   <!--Блок опис-->
   <section class="description">
     <div class="description_img">
-      <img src="/assets/img/infrastructure-descr-img.png" alt="infrastructure description image">
+      <picture>
+        <source srcset="/assets/img/infrastructure-descr-img-mobile.png" media="(max-width: 768px)">
+        <img src="/assets/img/infrastructure-descr-img.png" alt="infrastructure description image">
+      </picture>
     </div>
     <div class="description_info">
       <h2 class="description_info-title">
         Збір коштів на відновлення зруйнованого житла та інфраструктури
       </h2>
       <div class="description_info-text">
-        <p>
-          Війна призупинила можливість постачання до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку.
+        <p>1,8 трлн гривень — найскромніша оцінка збитків інфраструктурі України за місяць війни</p>
+        <p>Лише за перші три тижні російського вторгнення збитки, завдані інфраструктурі України, досягли щонайменше
+          1,8 трлн гривень ($62,6 млрд). Таку оцінку станом на 17 березня дали експерти Київської школи економіки в
+          межах спільного з урядом проекту.
         </p>
         <p>
-          За даними KSE та волонтерів від початку війни в Україні було пошкоджено та/або повністю зруйновано понад
-          200 освітніх закладів, 30 закладів охорони здоров'я, 8 церков, 1600 житлових будинків, 19 адміністративних
-          будівель, 23 заводи, 12 летовищ, 5 ТЕС та ГЕС.
+          Зруйновано щонайменше:
+        <ul>
+          <li>4 431 житловий будинок;</li>
+          <li>548 навчальних закладів;</li>
+          <li>135 медичних закладів;</li>
+          <li>8 закладів культури та мистецтва;</li>
+          <li>26 заводів та складів;</li>
+          <li>15 аеропортів;</li>
+          <li>6 ТЕС та ГЕС тощо.</li>
+        </ul>
         </p>
         <p>
-          Окрім цього зруйновано або виведено з ладу більше 15 тисяч кілометрів автомобільних доріг, 5 тисяч
-          кілометрів залізничних шляхів, 350 мостів та переходів.
+          Крім того, внаслідок атак російської армії Україна втратила:
+        <ul>
+          <li>понад 15 тисяч кілометрів автомобільних доріг</li>
+          <li>5 тисяч кілометрів залізничних шляхів</li>
+          <li>350 мостів та мостових переходів</li>
+        </ul>
+
         </p>
-        <p>
-          Ви можете долучитися до збору коштів на відновлення зруйнованого житла та інфраструктури
-        </p>
+        <p>Ці розрахунки побудовано на аналізі кількох тисяч публічних повідомлень від громадян, уряду, місцевих
+          органів влади щодо втрат та пошкоджень по всій країні</p>
+        <p>Ви можете долучитися до збору коштів на відновлення зруйнованих будівель та інфраструктури</p>
+
       </div>
     </div>
 
@@ -121,5 +137,5 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.2069d500826f098a1d36.js"></script><script type="text/javascript" src="assets/js/app.2069d500826f098a1d36.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.5c7362e5cc6071c156fc.js"></script><script type="text/javascript" src="assets/js/app.5c7362e5cc6071c156fc.js"></script></body>
 </html>
